--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,97 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../styles/general.css" />
+    <link rel="stylesheet" href="../styles/home.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="shortcut icon"
+      href="../images/asm_favicon.png"
+      type="image/x-icon"
+    />
   </head>
-  <body></body>
+  <body>
+    <!-- navbar with link to: -->
+    <!-- Home, About, Services, Blog, Contact -->
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="logo">
+        <a href="home.html">
+          <svg
+            width="300"
+            height="100"
+            viewBox="0 0 300 100"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <!-- Text -->
+            <text
+              x="60"
+              y="50"
+              font-family="Arial, sans-serif"
+              font-size="20"
+              font-weight="bold"
+              fill="#222"
+            >
+              Astana Sport Medicine
+            </text>
+          </svg>
+        </a>
+      </div>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle Navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item px-5">
+            <a class="nav-link" href="home.html">Home</a>
+          </li>
+          <li class="nav-item px-5">
+            <a class="nav-link" href="aboutUs.html">About Us</a>
+          </li>
+          <li class="nav-item px-5">
+            <a class="nav-link" href="services.html">Services</a>
+          </li>
+          <li class="nav-item px-5">
+            <a class="nav-link" href="blog.html">Blog</a>
+          </li>
+          <li class="nav-item px-5">
+            <a class="nav-link" href="contactUs.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  </body>
 </html>
