--- a/pages/home.html
+++ b/pages/home.html
@@ -45,7 +45,7 @@
                   font-family="Arial, sans-serif"
                   font-size="20"
                   font-weight="bold"
-                  fill="#222"
+                  fill="#fff"
                 >
                   Astana Sport Medicine
                 </text>
@@ -65,6 +65,13 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+            <!-- Login & Sign Up Buttons -->
+            <div class="registration r-small">
+              <a href="login.html" class="btn btn-outline-light me-2">Login</a>
+              <a href="signup.html" class="btn btn-outline-light me-2"
+                >Sign Up</a
+              >
+            </div>
 
           <!-- Navbar Links -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -85,16 +92,15 @@
                 <a class="nav-link" href="appointment.html">Appointment</a>
               </li>
             </ul>
-
-            <!-- Login & Sign Up Buttons -->
-            <div class="registration d-flex">
-              <a href="login.html" class="btn btn-outline-light me-2">Login</a>
-              <a href="signup.html" class="btn btn-outline-light me-2"
-                >Sign Up</a
-              >
-            </div>
           </div>
         </div>
+      </div>
+        <!-- Login & Sign Up Buttons -->
+        <div class="registration r-large">
+          <a href="login.html" class="btn btn-outline-light me-2">Login</a>
+          <a href="signup.html" class="btn btn-outline-light me-2"
+            >Sign Up</a
+          >
       </nav>
     </section>
 
@@ -243,9 +249,7 @@
 
     <section class="motivational-banner-section">
       <div class="container">
-        <h1 class="text-center my-5 fw-bold display-6">
-          With us you can:
-        </h1>
+        <h1 class="text-center my-5 fw-bold display-6">With us you can:</h1>
         <!-- Row 1 -->
         <div class="row motivational-banner-row">
           <div class="col-md-6 mb-4 mb-md-0">
