--- a/pages/home.html
+++ b/pages/home.html
@@ -65,13 +65,11 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
-            <!-- Login & Sign Up Buttons -->
-            <div class="registration r-small">
-              <a href="login.html" class="btn btn-outline-light me-2">Login</a>
-              <a href="signup.html" class="btn btn-outline-light me-2"
-                >Sign Up</a
-              >
-            </div>
+          <!-- Login & Sign Up Buttons -->
+          <div class="registration r-small">
+            <a href="login.html" class="btn btn-outline-light me-2">Login</a>
+            <a href="signup.html" class="btn btn-outline-light me-2">Sign Up</a>
+          </div>
 
           <!-- Navbar Links -->
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -94,13 +92,11 @@
             </ul>
           </div>
         </div>
-      </div>
         <!-- Login & Sign Up Buttons -->
         <div class="registration r-large">
           <a href="login.html" class="btn btn-outline-light me-2">Login</a>
-          <a href="signup.html" class="btn btn-outline-light me-2"
-            >Sign Up</a
-          >
+          <a href="signup.html" class="btn btn-outline-light me-2">Sign Up</a>
+        </div>
       </nav>
     </section>
 
@@ -247,7 +243,7 @@
       </div>
     </section>
 
-    <section class="motivational-banner-section">
+    <section class="motivational-banner-section hidden">
       <div class="container">
         <h1 class="text-center my-5 fw-bold display-6">With us you can:</h1>
         <!-- Row 1 -->
@@ -540,7 +536,7 @@
     </section>
 
     <!-- footer -->
-    <section class="footer hidden">
+    <section class="footer">
       <div class="container">
         <footer>
           <h1 class="text-center my-5">Astana Sport Medicine</h1>
