--- a/pages/services.html
+++ b/pages/services.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services</title>
+    <title>Home</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,64 +26,79 @@
     />
   </head>
   <body>
-    <!-- navbar with link to: -->
-    <!-- Home, About, Services, Blog, Contact -->
-    <nav class="navbar navbar-expand-lg fixed-top">
-      <div class="logo">
-        <a href="home.html">
-          <svg
-            width="300"
-            height="100"
-            viewBox="0 0 300 100"
-            xmlns="http://www.w3.org/2000/svg"
+    <!-- navbar-section -->
+    <section>
+      <nav class="navbar navbar-expand-lg fixed-top">
+        <div class="container-fluid">
+          <!-- Logo -->
+          <div class="logo">
+            <a href="home.html">
+              <svg
+                width="300"
+                height="100"
+                viewBox="0 0 300 100"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <text
+                  x="60"
+                  y="50"
+                  font-family="Arial, sans-serif"
+                  font-size="20"
+                  font-weight="bold"
+                  fill="#fff"
+                >
+                  Astana Sport Medicine
+                </text>
+              </svg>
+            </a>
+          </div>
+
+          <!-- Navbar Toggler -->
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle Navigation"
           >
-            <!-- Text -->
-            <text
-              x="60"
-              y="50"
-              font-family="Arial, sans-serif"
-              font-size="20"
-              font-weight="bold"
-              fill="#222"
-            >
-              Astana Sport Medicine
-            </text>
-          </svg>
-        </a>
-      </div>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle Navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Login & Sign Up Buttons -->
+          <div class="registration r-small">
+            <a href="login.html" class="btn btn-outline-light me-2">Login</a>
+            <a href="signup.html" class="btn btn-outline-light me-2">Sign Up</a>
+          </div>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav">
-          <li class="nav-item px-5">
-            <a class="nav-link" href="home.html">Home</a>
-          </li>
-          <li class="nav-item px-5">
-            <a class="nav-link" href="aboutUs.html">About Us</a>
-          </li>
-          <li class="nav-item px-5">
-            <a class="nav-link" href="services.html">Services</a>
-          </li>
-          <li class="nav-item px-5">
-            <a class="nav-link" href="blog.html">Blog</a>
-          </li>
-          <li class="nav-item px-5">
-            <a class="nav-link" href="contactUs.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
+          <!-- Navbar Links -->
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto">
+              <li class="nav-item px-3">
+                <a class="nav-link" href="home.html">Home</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link" href="aboutUs.html">About Us</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link" href="services.html">Services</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link" href="blog.html">Blog</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link" href="appointment.html">Appointment</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- Login & Sign Up Buttons -->
+        <div class="registration r-large">
+          <a href="login.html" class="btn btn-outline-light me-2">Login</a>
+          <a href="signup.html" class="btn btn-outline-light me-2">Sign Up</a>
+        </div>
+      </nav>
+    </section>
     <main class="container mt-5 pt-5">
       <h1 class="text-center mb-5">Our Services</h1>
 
@@ -117,23 +132,8 @@
         </form>
       </div>
     </main>
-    <section>
-      <div class="banner text-center">
-        <h5>Banner</h5>
-        <h1>Some Text</h1>
-        <h1>Some Text</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-          aliquam tenetur molestias eaque, consequatur, omnis dolore repellendus
-          ab porro, est impedit nobis nulla harum sed velit magnam rem officiis!
-          Et!
-        </p>
-        <button>Do something</button>
-        <canvas id="dotsCanvas"></canvas>
-      </div>
-    </section>
     <!-- footer -->
-    <div style="background-color: #008000" class="py-2">
+    <section class="footer hidden">
       <div class="container">
         <footer>
           <h1 class="text-center my-5">Astana Sport Medicine</h1>
@@ -142,32 +142,22 @@
               <div class="footer-phone">
                 <h5 style="color: #fff">Contacts</h5>
                 <p>
-                  <a href="#">+7 705 296 XX XX</a>
+                  +7 705 296 XX XX
                   <br />
-                  <a href="#">+7 775 603 XX XX</a>
+                  +7 775 603 XX XX
                 </p>
               </div>
               <div class="footer-email">
                 <h5 style="color: #fff">Email</h5>
-                <p><a href="#">info@med.kz</a></p>
+                <p>info@med.kz</p>
               </div>
             </div>
             <div>
               <h5 style="color: #fff">Opening Times:</h5>
-              <div class="opening-times">
-                <div class="time">
-                  <p class="day"><a href="#">Mo-Fr</a></p>
-                  <p class="clock"><a href="#">07-22 o'clock</a></p>
-                </div>
-                <div class="time">
-                  <p class="day"><a href="#">Saturday</a></p>
-                  <p class="clock"><a href="#">10-16 o'clock</a></p>
-                </div>
-                <div class="time">
-                  <p class="day"><a href="#">Sunday</a></p>
-                  <p class="clock"><a href="#">10-17 o'clock</a></p>
-                </div>
-              </div>
+              <p></p>
+              <pre>Mo-Fr          07-22 o'clock</pre>
+              <pre>Saturday       10-16 o'clock</pre>
+              <pre>Sunday         10-17 o'clock</pre>
             </div>
             <div class="social">
               <h5 style="color: #fff">Social Media:</h5>
@@ -189,7 +179,7 @@
           </div>
         </footer>
       </div>
-    </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -202,7 +192,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="../scripts/services.js"></script>
     <script src="../scripts/general.js"></script>
+    <script src="../scripts/services.js"></script>
   </body>
 </html>
