--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -100,6 +100,53 @@
       </nav>
     </section>
 
+    <!-- history -->
+    <section class="about-us py-5 section">
+      <div class="container">
+        <div class="row align-items-center">
+          <!-- Bootstrap Carousel on the Left -->
+          <div class="col-md-12 col-xl-7">
+            <div id="aboutCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="../images/clinic/facility.jpg" class="d-block w-100" alt="Sports Medicine Facility">
+                </div>
+                <div class="carousel-item">
+                  <img src="../images/clinic/doctor.jpg" class="d-block w-100" alt="Team of Doctors">
+                </div>
+                <div class="carousel-item">
+                  <img src="../images/clinic/rehab.jpg" class="d-block w-100" alt="Athlete Rehabilitation">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#aboutCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#aboutCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+    
+          <!-- About Us Content on the Right -->
+          <div class="col-md-12 col-xl-5">
+            <h2 class="mb-4">About Astana Sport Medicine</h2>
+            <p class="lead">
+              We established Astana Sport Medicine in 2010 with a mission to provide world-class sports medicine services to athletes in Kazakhstan. Over the years, we have grown into a leading center for sports injury prevention, rehabilitation, and performance optimization.
+            </p>
+            <p>
+              Originally starting as a small clinic, we have expanded our services to include a wide range of specialties, from orthopedic surgery and physical therapy to sports nutrition and mental health support. Our team of dedicated doctors, trainers, and specialists work tirelessly to ensure that every athlete receives personalized care tailored to their needs.
+            </p>
+            <p>
+              Seven days a week, our state-of-the-art facility offers a variety of programs, including injury assessments, rehabilitation sessions, and performance training. Whether you're a professional athlete or a fitness enthusiast, our team is here to help you achieve your goals and stay at the top of your game.
+            </p>
+            <a href="#" class="btn btn-primary mt-3">Read More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- our team  -->
     <section class="section">
       <div class="container">
         <!-- Team Section Header -->
