--- a/pages/blog.html
+++ b/pages/blog.html
@@ -27,78 +27,7 @@
   </head>
   <body>
     <!-- navbar-section -->
-    <section>
-      <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-          <!-- Logo -->
-          <div class="logo">
-            <a href="home.html">
-              <svg
-                width="300"
-                height="100"
-                viewBox="0 0 300 100"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <text
-                  x="60"
-                  y="50"
-                  font-family="Arial, sans-serif"
-                  font-size="20"
-                  font-weight="bold"
-                  fill="#fff"
-                >
-                  Astana Sport Medicine
-                </text>
-              </svg>
-            </a>
-          </div>
-
-          <!-- Navbar Toggler -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent"
-            aria-expanded="false"
-            aria-label="Toggle Navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <!-- Login & Sign Up Buttons -->
-          <div class="registration r-small">
-            <a href="login.html" class="btn btn-outline-light me-2">Login</a>
-            <a href="signup.html" class="btn btn-outline-light me-2">Sign Up</a>
-          </div>
-
-          <!-- Navbar Links -->
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item px-3">
-                <a class="nav-link" href="home.html">Home</a>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="aboutUs.html">About Us</a>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="services.html">Services</a>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="blog.html">Blog</a>
-              </li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="appointment.html">Appointment</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- Login & Sign Up Buttons -->
-        <div class="registration r-large">
-          <a href="login.html" class="btn btn-outline-light me-2">Login</a>
-          <a href="signup.html" class="btn btn-outline-light me-2">Sign Up</a>
-        </div>
-      </nav>
-    </section>
+    <div id="navbar-container"></div>
 
     <!-- posts section -->
     <section class="posts section hidden">
@@ -136,53 +65,8 @@
       </div>
     </section>
     <!-- footer -->
-    <section class="footer">
-      <div class="container">
-        <footer>
-          <h1 class="text-center my-5">Astana Sport Medicine</h1>
-          <div class="footer-about-clinic">
-            <div class="contacts">
-              <div class="footer-phone">
-                <h5 style="color: #fff">Contacts</h5>
-                <p>
-                  +7 705 296 XX XX
-                  <br />
-                  +7 775 603 XX XX
-                </p>
-              </div>
-              <div class="footer-email">
-                <h5 style="color: #fff">Email</h5>
-                <p>info@med.kz</p>
-              </div>
-            </div>
-            <div>
-              <h5 style="color: #fff">Opening Times:</h5>
-              <p></p>
-              <pre>Mo-Fr          07-22 o'clock</pre>
-              <pre>Saturday       10-16 o'clock</pre>
-              <pre>Sunday         10-17 o'clock</pre>
-            </div>
-            <div class="social">
-              <h5 style="color: #fff">Social Media:</h5>
-              <div class="footer-social">
-                <a href="https://www.instagram.com" target="_blank"
-                  ><i class="fa-brands fa-instagram"></i
-                ></a>
-                <a href="https://www.youtube.com" target="_blank"
-                  ><i class="fa-brands fa-youtube"></i
-                ></a>
-                <a href="https://www.tiktok.com" target="_blank"
-                  ><i class="fa-brands fa-tiktok"></i
-                ></a>
-                <a href="https://www.facebook.com" target="_blank"
-                  ><i class="fa-brands fa-facebook"></i
-                ></a>
-              </div>
-            </div>
-          </div>
-        </footer>
-      </div>
-    </section>
+    <div id="footer-container"></div>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
